# master-thesis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
duck_data/: duckdata_cnnAE.ipynb  duckdata_cnnAE.py
final_code/convolutional_AE/: compute_encodings.py  isa_conv_AE.py  main.py  sanity_check.py  test.ipynb  visualise.py  visualise_encodings.py  visualise_error.py  visualise_training.py
final_code/linear_AE/: isa_linear_AE.py  main.py  visualise.py
final_code/linear_AE_10d_amsgrad_10e5_epochs/: main.py  visualise_training.py
final_code/linear_AE_2d_adam/: isa_linear_AE.py  main.py  visualise.py  visualise_training.py
final_code/linear_AE_3d_adam/: main.py  visualise_training.py
final_code/linear_AE_3d_amsgrad/: main.py  visualise.py  visualise_training.py
final_code/linear_AE_amsgrad/: isa_linear_AE.py  (+1 more)
mnist/: classifier_model_state.pt  cnnAE.ipynb  linearAE.ipynb  linearAE.py  linearAE_3Dplot.py  linearVAE.ipynb  main.py  modules.py  test.ipynb  visualisations.py
mnist_autoencoder/: cnnAE.ipynb  linearAE.ipynb  wip.py
mnist_classifier/: predict.py  torchnn.py  train.py
src/: load_mnist.py  main.py  test.ipynb  visualise.py
test/: models.py  wip.py
writing/: autoencoders.aux  autoencoders.tex  bibliography.aux  bibliography.bib  bibliography.blg  convergence_rates.aux  implementation.aux  implementation.tex  main.aux  main.bbl  main.blg  main.dvi  main.out  main.out.ps  main.tex  main.toc  preliminary.aux  preliminary.blg  preliminary.dvi  preliminary.tex  vae.aux  vae.tex  well-posedness.aux  well-posedness.tex
(+270 files in other folders)
